Removed modal in CurrentBook View

--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="text-center">
-                <button id="update-profile-button" type="submit" class="btn">Update Profile</button>
+                <button id="update-profile-button" type="submit" class="btn button">Update Profile</button>
             </div>
         </form>
     </div>
