--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -53,8 +53,8 @@
         <span asp-validation-for="ImageFile" class="small text-danger"></span>
     </div>
     <div id="AuthorsContainer">
-        <a class="btn" onclick="AddAuthors()"><strong>Add Author</strong></a>
-        <a class="btn" onclick="RemoveAuthors()"><strong>Remove Author</strong></a>
+        <a class="btn button" onclick="AddAuthors()"><strong>Add Author</strong></a>
+        <a class="btn button" onclick="RemoveAuthors()"><strong>Remove Author</strong></a>
     </div>
     <div class="form-group justify-content-center">
         <label asp-for="Description"><strong>Description</strong></label>
