--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -7,7 +7,7 @@
 <div class="col d-flex justify-content-center">
     <div id="textCard" class="card col-8 text-center">
         <div class="card-body">
-            <h1 class="display-4">@Model.CategoryName</h1>
+            <h1 class="display-4">@Model.CategoryName (@Model.BookCount)</h1>
         </div>
     </div>
 </div>
