--- a/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
+++ b/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
@@ -20,7 +20,7 @@
                             @if (Model.IsUserBook)
                             {
                                 <div class="m-4 text-center">
-                                    <a class="btn btn-outline-warning" asp-controller="Book" asp-action="Edit" asp-route-bookId="@Model.Id">
+                                    <a class="btn btn-warning" asp-controller="Book" asp-action="Edit" asp-route-bookId="@Model.Id">
                                         Edit
                                     </a>
                                 </div>
@@ -44,7 +44,7 @@
                         {
                             <div class="m-4 text-center">
                                 <form id="deleteForm" asp-area="admin" asp-controller="Book" asp-action="Delete" asp-route-bookId="@Model.Id"></form>
-                                <button type="button" class="btn btn-danger" asp-area="admin" asp-controller="Book" asp-action="Delete" asp-route-bookId="@Model.Id" data-toggle="modal" data-target="#deleteModal">
+                                <button type="button" class="btn btn-danger"  data-toggle="modal" data-target="#deleteModal">
                                     Delete
                                 </button>
                             </div>
@@ -258,11 +258,11 @@
                                 </div>
                                 @if (this.User.IsInRole("Administrator"))
                                 {
-                                    <div class="mt-2">
-                                        <form asp-action="Delete" asp-controller="Comment" asp-area="admin" asp-route-commentId="@comment.Id" id="deleteCommentForm"></form>
-                                        <button class="btn btn-sm shadow-none" type="button" data-toggle="modal" data-target="#deleteCommentModal">
+                                     <div class="mt-2">
+                                        
+                                        <a asp-action="Delete" asp-controller="Comment" asp-area="admin" asp-route-commentId="@comment.Id" class="btn button btn-sm shadow-none">
                                             Delete comment
-                                        </button>
+                                        </a>
                                     </div>
                                 }
                             </div>
@@ -274,26 +274,6 @@
     }
 
 </section>
-
-<div class="modal fade" id="deleteCommentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete comment</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete this comment?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" onclick="deleteCommentForm.submit()">Delete</button>
-                <button type="button" class="btn" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -309,7 +289,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" onclick="deleteForm.submit()">Delete</button>
-                <button type="button" class="btn" data-dismiss="modal">Close</button>
+                <button type="button" class="btn button" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
