--- a/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -5,9 +5,9 @@
 }
 
 <div class="col d-flex justify-content-center">
-    <div id="textCard" class="card col-4 text-center">
+    <div id="textCard" class="card col-5 text-center">
         <div class="card-body">
-            <h1 class="display-4">@ViewData["Title"]</h1>
+            <h1 class="display-4">@ViewData["Title"] (@Model.BookCount)</h1>
         </div>
     </div>
 </div>
