--- a/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
+++ b/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
@@ -17,6 +17,11 @@
                             <a class="btn button flex-shrink-0" asp-controller="Book" asp-action="Download" asp-route-id="@Model.Id">
                                 Download<i class="fas fa-download icon"></i>
                             </a>
+                            <div class="m-4 text-center">
+                                <a class="btn button" asp-controller="Comment" asp-action="Create" asp-route-bookId="@Model.Id" asp-route-bookTitle=@Model.Title>
+                                    Post Comment
+                                </a>
+                            </div>
                             @if (Model.IsUserBook)
                             {
                                 <div class="m-4 text-center">
@@ -44,7 +49,7 @@
                         {
                             <div class="m-4 text-center">
                                 <form id="deleteForm" asp-area="admin" asp-controller="Book" asp-action="Delete" asp-route-bookId="@Model.Id"></form>
-                                <button type="button" class="btn btn-danger"  data-toggle="modal" data-target="#deleteModal">
+                                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
                                     Delete
                                 </button>
                             </div>
@@ -71,7 +76,7 @@
                                 </li>
                             }
                             <li class="list-group-item list-group-item-action">
-                                Category: @Model.CategoryName
+                                Category: <a asp-controller="Book" asp-action="All" asp-route-categoryName="@Model.CategoryName">@Model.CategoryName</a>
                             </li>
                             <li class="list-group-item list-group-item-action">
                                 Pages: @Model.PagesCount
@@ -94,6 +99,9 @@
                             </li>
                             <li class="list-group-item list-group-item-action">
                                 <span>Average Score: <span id="averageVoteValue">@Model.RatingsAvg.ToString("f1")</span><span>/5</span><span>(Ratings count: <span id="votesCount">@Model.RatingsCount</span>)</span></span>
+                            </li>
+                            <li class="list-group-item list-group-item-action">
+                                <a href="#comments">Comments: @Model.Comments.Count()</a>
                             </li>
                         </ul>
                         <div class="text-center">
@@ -218,8 +226,8 @@
 <hr />
 
 
-<section>
-    <a class="btn button" asp-action="Create" asp-controller="Comment" asp-route-bookId=@Model.Id asp-route-bookTitle=@Model.Title>Post Comment</a>
+<section id="comments">
+
     @foreach (var comment in Model.Comments)
     {
         <div class="commentContainer mt-5">
@@ -258,8 +266,8 @@
                                 </div>
                                 @if (this.User.IsInRole("Administrator"))
                                 {
-                                     <div class="mt-2">
-                                        
+                                    <div class="mt-2">
+
                                         <a asp-action="Delete" asp-controller="Comment" asp-area="admin" asp-route-commentId="@comment.Id" class="btn button btn-sm shadow-none">
                                             Delete comment
                                         </a>
