--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -44,7 +44,7 @@
     </div>
     <div class="custom-file">
         <input asp-for="BookFile" type="file" class="custom-file-input" id="customFile">
-        <label asp-for="BookFile" class="custom-file-label" for="customFile"><strong>Choose PDF File</strong></label>
+        <label asp-for="BookFile" class="custom-file-label" for="customFile"><strong>Choose PDF File(Up to 50 MB)</strong></label>
         <span asp-validation-for="BookFile" class="small text-danger"></span>
     </div>
     <div class="custom-file">
