--- a/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
+++ b/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     @foreach (var book in Model)
     {
-        <div class="col-md-3 mt-5 mb-4 overflow-hidden">
+        <div class="col-md-3 mt-5 mb-4">
             <div class="card bg-dark text-light h-100">
                 <img title="@book.Title" src="@book.ImageUrl" alt="Book" height="300">
                 <div class="card-body ">
